--- a/index.html
+++ b/index.html
@@ -198,9 +198,59 @@
     </section>
     <!-- ФУТЕР -->
     <footer>
-      <!-- <a href="/index.html">
+      <a href="/index.html">
         <img src="./images/logo-header.svg" alt="" />
-      </a> -->
+      </a>
+      <p>Приєднуйтесь</p>
+      <p>Допомога і консультація:</p>
+      <p>Інформація</p>
+      <ul>
+        <li><a href="#">Про нас</a></li>
+        <li><a href="#">Оплата</a></li>
+        <li><a href="#">Доставка та збірка</a></li>
+        <li><a href="#">Відгуки</a></li>
+        <li><a href="#">Блог</a></li>
+        <li><a href="#">Контакти</a></li>
+        <li><a href="#">Мапа сайту</a></li>
+      </ul>
+
+      <p>Категорії</p>
+      <ul>
+        <li><a href="#">Ліжка</a></li>
+        <li><a href="#">Матраци</a></li>
+        <li><a href="#">М’які меблі</a></li>
+        <li><a href="#">Шафи</a></li>
+        <li><a href="#">Комоди</a></li>
+        <li><a href="#">Тумби</a></li>
+        <li><a href="#">Столи</a></li>
+        <li><a href="#">Стільці</a></li>
+        <li><a href="#">Меблеві стіни</a></li>
+        <li><a href="#">Кухні</a></li>
+      </ul>
+      <p>Клієнтам</p>
+      <ul>
+        <li><a href="#">Акції</a></li>
+        <li><a href="#">Розпродаж</a></li>
+        <li><a href="#">Купити в кредит</a></li>
+        <li><a href="#">Обмін і повернення товару</a></li>
+        <li><a href="#">Часто задавані питання</a></li>
+        <li><a href="#">Умови покупки</a></li>
+        <li><a href="#">Політика конфіденційності</a></li>
+      </ul>
+      <a href="tel:+38 067 929-45-45">+38 067 929-45-45 </a>
+      <a href="tel:+38 050 133-45-45"> +38 050 133-45-45 </a>
+      <a
+        href="tel:
++38 093 170-75-45"
+      >
+        +38 093 170-75-45</a
+      >
+      <!-- КАРТА -->
+      <a href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
+        >м. Київ, провулок Ізяславський 52, поверх 2</a
+      >
+      <p>Працюємо щодня з 9:00 до 18:00</p>
+      <p>&#169; KROVATO - Технології сну - 2022. Всі права захищені.</p>
     </footer>
   </body>
 </html>
