--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bed</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!-- ХЕДЕР -->
-    <header>
+    <header class="header">
       <nav>
-        <ul>
-          <li><a href="#">Про нас</a></li>
-          <li><a href="#">Оплата</a></li>
-          <li><a href="#">Доставка та збірка</a></li>
-          <li><a href="#">Відгуки</a></li>
-          <li><a href="#">Блог</a></li>
-          <li><a href="#">Контакти</a></li>
+        <ul class="list">
+          <li><a href="" class="link-about">Про нас</a></li>
+          <li><a href="" class="link-about">Оплата</a></li>
+          <li><a href="" class="link-about">Доставка та збірка</a></li>
+          <li><a href="" class="link-about">Відгуки</a></li>
+          <li><a href="" class="link-about">Блог</a></li>
+          <li><a href="" class="link-about">Контакти</a></li>
         </ul>
-        <p>Допомога і консультація:</p>
-        <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+        <p class="help-consul">Допомога і консультація:</p>
+        <ul class="list">
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
         </ul>
         <!-- ДАЛІ БУДЕ ФОРМА- ЯК ДОЙДУ ДО ФОРМ - ТОДІ ЗРОБЛЮ -->
         <a href="./index.html">
@@ -37,205 +37,212 @@
         <button type="button">Каталог</button>
         <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
         <p>Щодня з 9:00 до 18:00</p>
-        <p>067 929-45-45</p>
-        <ul>
-          <li><a href="#">Акції</a></li>
-          <li><a href="#">Розпродаж</a></li>
-          <li><a href="#">Купити в кредит</a></li>
+        <a href="tel: 0679294545" class="header-tel">067 929-45-45</a>
+        <ul class="list">
+          <li><a href="">Акції</a></li>
+          <li><a href="">Розпродаж</a></li>
+          <li><a href="">Купити в кредит</a></li>
         </ul>
-        <ul>
-          <li><a href="#">Дитяча</a></li>
-          <li><a href="#">Кухня</a></li>
-          <li><a href="#">Ванна</a></li>
-          <li><a href="#">Спальня</a></li>
-          <li><a href="#">Передпокій</a></li>
-          <li><a href="#">Вітальня</a></li>
-          <li><a href="#">Офіс</a></li>
+        <ul class="list">
+          <li><a href="">Дитяча</a></li>
+          <li><a href="">Кухня</a></li>
+          <li><a href="">Ванна</a></li>
+          <li><a href="">Спальня</a></li>
+          <li><a href="">Передпокій</a></li>
+          <li><a href="">Вітальня</a></li>
+          <li><a href="">Офіс</a></li>
         </ul>
       </nav>
     </header>
-    <!-- ГЕРОЙ -->
-    <section>
-      <h1>Ліжко хюпер</h1>
-      <img src="./images/slider-akcii.jpg" alt="" width="1290" height="420" />
-    </section>
-    <!-- ПОПУЛЯРНІ КАТЕГОРІЇ -->
-    <section>
-      <h2>Популярні категорії</h2>
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </section>
-    <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
-    <section>
-      <h2>Найпопулярніші товари</h2>
-      <p>Дивитись всі</p>
-      <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-      </ul>
-    </section>
-    <!-- АКЦІЇ -->
-    <section>
-      <h2>Акції</h2>
-      <p>Дивитись всі</p>
-      <ul>
-        <li>
-          <a href="#"
-            ><img
-              src="./images/akciya(літній розпродаж).jpg"
-              alt="акція-літній розпродаж"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./images/akciya(диванний цінопад).jpg"
-              alt="акція-диванний цінопад"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./images/akciya(королівські скидки).jpg"
-              alt="акція-королівські скидки"
-          /></a>
-        </li>
-      </ul>
-    </section>
-    <!-- ОСТАННІ ВІДГУКИ  -->
-    <section>
-      <h2>Останні відгуки</h2>
-      <a href="#"
-        ><img
-          src="./images/лого(останні відгуки).svg"
-          alt="логотип"
-          width="80"
-          height="80"
-      /></a>
-      <h3>Магазин меблів для дому «KROVATO»</h3>
-      <p>5.0</p>
-      <p>Базовано на відгуках: 269</p>
-      <button type="button">Написати відгук</button>
-      <a href="">Всі відгуки</a>
-    </section>
-    <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
-    <section>
-      <h2>Свіжі статті та останні новини</h2>
-      <a href="">Читати блог</a>
-      <ul>
-        <li>
-          <img src="" alt="" />
-          <p></p>
-          <a href="">Детальніше</a>
-        </li>
-        <li>
-          <img src="" alt="" />
-          <p></p>
-          <a href="">Детальніше</a>
-        </li>
-        <li>
-          <img src="" alt="" />
-          <p></p>
-          <a href="">Детальніше</a>
-        </li>
-      </ul>
-    </section>
-    <!-- ПРО  -->
-    <section>
-      <p>KROVATO - коли потрібні якісні меблі за доступною ціною!</p>
-      <p>
-        Якщо в пошуковий рядок браузера ввести запит: «Куплю ліжко, шафу,
-        диван», система видасть сотні продавців, що спеціалізуються з продажу
-        цього товару. Але далеко не всі магазини та сайти в інтернеті можуть
-        запропонувати такий самий різноманітний асортимент, як наша компанія. Та
-        й з нашими цінами конкурувати можуть мало хто. Адже товар ми отримуємо
-        безпосередньо від виробників, не переплачуючи за послуги посередників.
-        До того ж, продажі ми ведемо як онлайн, так і в салоні, при цьому ціна
-        на асортимент онлайн та офлайн - однакова. Ми співпрацюємо тільки з
-        найкращими вітчизняними та зарубіжними фабриками та компаніями, які
-        отримали визнання покупців та експертів меблевої справи. Для нас
-        важливо, щоб товар, який ми продаємо, відповідав міжнародним стандартам
-        якості, був із сертифікованих матеріалів – довговічних, красивих та
-        екологічно чистих. Ми з особливою ретельністю відбираємо пропозиції для
-        магазину, тому можемо поручитися за їхню якість і впевнено рекомендувати
-        клієнтам. У нас ви легко знайдете меблеві серії в класичному та
-        модерному стилі, лінійки для оформлення житла в дусі романтики або
-        скандинавського лаконізму. ..
-      </p>
-    </section>
-    <!-- ПЕРЕВАГИ -->
-    <section>
-      <ul>
-        <li>
-          <img src="" alt="" />
-          <p>Безкоштовна збірка</p>
-        </li>
-        <li>
-          <img src="" alt="" />
-          <p>Післягарантійне обслуговування</p>
-        </li>
-        <li>
-          <img src="" alt="" />
-          <p>Знижки клієнтам</p>
-        </li>
-      </ul>
-    </section>
+    <main>
+      <!-- ГЕРОЙ -->
+      <section>
+        <h1>Ліжко хюпер</h1>
+        <img
+          src="./images/slider-akcii.jpg"
+          alt="слайдер"
+          width="1290"
+          height="420"
+        />
+      </section>
+      <!-- ПОПУЛЯРНІ КАТЕГОРІЇ -->
+      <section class="section">
+        <h2 class="section-title">Популярні категорії</h2>
+        <ul class="list">
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </section>
+      <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
+      <section class="section">
+        <h2 class="section-title">Найпопулярніші товари</h2>
+        <p>Дивитись всі</p>
+        <ul class="list">
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </section>
+      <!-- АКЦІЇ -->
+      <section class="section">
+        <h2 class="section-title">Акції</h2>
+        <p>Дивитись всі</p>
+        <ul class="list">
+          <li>
+            <a href=""
+              ><img
+                src="./images/akciya(літній-розпродаж).jpg"
+                alt="акція-літній розпродаж"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/akciya(диванний-цінопад).jpg"
+                alt="акція-диванний цінопад"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/akciya(королівські-скидки).jpg"
+                alt="акція-королівські скидки"
+            /></a>
+          </li>
+        </ul>
+      </section>
+      <!-- ОСТАННІ ВІДГУКИ  -->
+      <section class="section">
+        <h2 class="section-title">Останні відгуки</h2>
+        <a href=""
+          ><img
+            src="./images/лого(останні-відгуки).svg"
+            alt="логотип"
+            width="80"
+            height="80"
+        /></a>
+        <h3>Магазин меблів для дому «KROVATO»</h3>
+        <p>5.0</p>
+        <p>Базовано на відгуках: 269</p>
+        <button type="button">Написати відгук</button>
+        <a href="">Всі відгуки</a>
+      </section>
+      <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
+      <section class="section">
+        <h2 class="section-title">Свіжі статті та останні новини</h2>
+        <a href="">Читати блог</a>
+        <ul class="list">
+          <li>
+            <img src="" alt="" />
+            <p></p>
+            <a href="">Детальніше</a>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p></p>
+            <a href="">Детальніше</a>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p></p>
+            <a href="">Детальніше</a>
+          </li>
+        </ul>
+      </section>
+      <!-- ПРО  -->
+      <section>
+        <p>KROVATO - коли потрібні якісні меблі за доступною ціною!</p>
+        <p>
+          Якщо в пошуковий рядок браузера ввести запит: «Куплю ліжко, шафу,
+          диван», система видасть сотні продавців, що спеціалізуються з продажу
+          цього товару. Але далеко не всі магазини та сайти в інтернеті можуть
+          запропонувати такий самий різноманітний асортимент, як наша компанія.
+          Та й з нашими цінами конкурувати можуть мало хто. Адже товар ми
+          отримуємо безпосередньо від виробників, не переплачуючи за послуги
+          посередників. До того ж, продажі ми ведемо як онлайн, так і в салоні,
+          при цьому ціна на асортимент онлайн та офлайн - однакова. Ми
+          співпрацюємо тільки з найкращими вітчизняними та зарубіжними фабриками
+          та компаніями, які отримали визнання покупців та експертів меблевої
+          справи. Для нас важливо, щоб товар, який ми продаємо, відповідав
+          міжнародним стандартам якості, був із сертифікованих матеріалів –
+          довговічних, красивих та екологічно чистих. Ми з особливою ретельністю
+          відбираємо пропозиції для магазину, тому можемо поручитися за їхню
+          якість і впевнено рекомендувати клієнтам. У нас ви легко знайдете
+          меблеві серії в класичному та модерному стилі, лінійки для оформлення
+          житла в дусі романтики або скандинавського лаконізму. ..
+        </p>
+      </section>
+      <!-- ПЕРЕВАГИ -->
+      <section>
+        <ul class="list">
+          <li>
+            <img src="" alt="" />
+            <p>Безкоштовна збірка</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p>Післягарантійне обслуговування</p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <p>Знижки клієнтам</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <!-- ФУТЕР -->
     <footer>
       <a href="/index.html">
-        <img src="./images/logo-header.svg" alt="" />
+        <img src="./images/logo-header.svg" alt="логотип" />
       </a>
       <p>Приєднуйтесь</p>
       <p>Допомога і консультація:</p>
       <p>Інформація</p>
-      <ul>
-        <li><a href="#">Про нас</a></li>
-        <li><a href="#">Оплата</a></li>
-        <li><a href="#">Доставка та збірка</a></li>
-        <li><a href="#">Відгуки</a></li>
-        <li><a href="#">Блог</a></li>
-        <li><a href="#">Контакти</a></li>
-        <li><a href="#">Мапа сайту</a></li>
+      <ul class="list">
+        <li><a href="">Про нас</a></li>
+        <li><a href="">Оплата</a></li>
+        <li><a href="">Доставка та збірка</a></li>
+        <li><a href="">Відгуки</a></li>
+        <li><a href="">Блог</a></li>
+        <li><a href="">Контакти</a></li>
+        <li><a href="">Мапа сайту</a></li>
       </ul>
 
       <p>Категорії</p>
-      <ul>
-        <li><a href="#">Ліжка</a></li>
-        <li><a href="#">Матраци</a></li>
-        <li><a href="#">М’які меблі</a></li>
-        <li><a href="#">Шафи</a></li>
-        <li><a href="#">Комоди</a></li>
-        <li><a href="#">Тумби</a></li>
-        <li><a href="#">Столи</a></li>
-        <li><a href="#">Стільці</a></li>
-        <li><a href="#">Меблеві стіни</a></li>
-        <li><a href="#">Кухні</a></li>
+      <ul class="list">
+        <li><a href="">Ліжка</a></li>
+        <li><a href="">Матраци</a></li>
+        <li><a href="">М’які меблі</a></li>
+        <li><a href="">Шафи</a></li>
+        <li><a href="">Комоди</a></li>
+        <li><a href="">Тумби</a></li>
+        <li><a href="">Столи</a></li>
+        <li><a href="">Стільці</a></li>
+        <li><a href="">Меблеві стіни</a></li>
+        <li><a href="">Кухні</a></li>
       </ul>
       <p>Клієнтам</p>
-      <ul>
-        <li><a href="#">Акції</a></li>
-        <li><a href="#">Розпродаж</a></li>
-        <li><a href="#">Купити в кредит</a></li>
-        <li><a href="#">Обмін і повернення товару</a></li>
-        <li><a href="#">Часто задавані питання</a></li>
-        <li><a href="#">Умови покупки</a></li>
-        <li><a href="#">Політика конфіденційності</a></li>
+      <ul class="list">
+        <li><a href="">Акції</a></li>
+        <li><a href="">Розпродаж</a></li>
+        <li><a href="">Купити в кредит</a></li>
+        <li><a href="">Обмін і повернення товару</a></li>
+        <li><a href="">Часто задавані питання</a></li>
+        <li><a href="">Умови покупки</a></li>
+        <li><a href="">Політика конфіденційності</a></li>
       </ul>
       <a href="tel:+38 067 929-45-45">+38 067 929-45-45 </a>
       <a href="tel:+38 050 133-45-45"> +38 050 133-45-45 </a>
@@ -254,3 +261,5 @@
     </footer>
   </body>
 </html>
+
+<!-- НЕ ЗАБУТИ ЗА ARIA-LABEL - ДЛЯ СВГ  -->
