add color for text to header

--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
         </a>
         <button type="button">Каталог</button>
         <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
-        <p>Щодня з 9:00 до 18:00</p>
+        <p class="work-hours">Щодня з 9:00 до 18:00</p>
         <a href="tel: 0679294545" class="header-tel">067 929-45-45</a>
-        <ul class="list">
-          <li><a href="">Акції</a></li>
-          <li><a href="">Розпродаж</a></li>
-          <li><a href="">Купити в кредит</a></li>
+        <ul class="icons-list list">
+          <li><a href="" class="icons-link">Акції</a></li>
+          <li><a href="" class="icons-link">Розпродаж</a></li>
+          <li><a href="" class="icons-link">Купити в кредит</a></li>
         </ul>
-        <ul class="list">
-          <li><a href="">Дитяча</a></li>
-          <li><a href="">Кухня</a></li>
-          <li><a href="">Ванна</a></li>
-          <li><a href="">Спальня</a></li>
-          <li><a href="">Передпокій</a></li>
-          <li><a href="">Вітальня</a></li>
-          <li><a href="">Офіс</a></li>
+        <ul class="species-list list">
+          <li><a href="" class="species-link">Дитяча</a></li>
+          <li><a href="" class="species-link">Кухня</a></li>
+          <li><a href="" class="species-link">Ванна</a></li>
+          <li><a href="" class="species-link">Спальня</a></li>
+          <li><a href="" class="species-link">Передпокій</a></li>
+          <li><a href="" class="species-link">Вітальня</a></li>
+          <li><a href="" class="species-link">Офіс</a></li>
         </ul>
       </nav>
     </header>
