add markup and color for popular categories

--- a/index.html
+++ b/index.html
@@ -66,19 +66,69 @@
         />
       </section>
       <!-- ПОПУЛЯРНІ КАТЕГОРІЇ -->
-      <section class="section">
+      <section class="section popular-categories">
         <h2 class="section-title">Популярні категорії</h2>
         <ul class="list">
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <li>
+            <a href=""
+              ><h3 class="title-desc">Ліжка</h3>
+              <p class="text-amount">54</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><h3 class="title-desc">Матраци</h3>
+              <p class="text-amount">30</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><h3 class="title-desc">М'які меблі</h3>
+              <p class="text-amount">196</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><h3 class="title-desc">Шафи</h3>
+              <p class="text-amount">79</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><h3 class="title-desc">Комоди</h3>
+              <p class="text-amount">54</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><h3 class="title-desc">Тумби</h3>
+              <p class="text-amount">64</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><h3 class="title-desc">Столи</h3>
+              <p class="text-amount">35</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><h3 class="title-desc">Стільці</h3>
+              <p class="text-amount">89</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><h3 class="title-desc">Меблеві стіни</h3>
+              <p class="text-amount">24</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><h3 class="title-desc">Кухні</h3>
+              <p class="text-amount">30</p></a
+            >
+          </li>
         </ul>
       </section>
       <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
