add markup and color for text to popular-products

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button type="button">Каталог</button>
         <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
         <p class="work-hours">Щодня з 9:00 до 18:00</p>
-        <a href="tel: 0679294545" class="header-tel">067 929-45-45</a>
+        <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
         <ul class="icons-list list">
           <li><a href="" class="icons-link">Акції</a></li>
           <li><a href="" class="icons-link">Розпродаж</a></li>
@@ -132,18 +132,110 @@
         </ul>
       </section>
       <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
-      <section class="section">
+      <section class="section popular-products">
         <h2 class="section-title">Найпопулярніші товари</h2>
-        <p>Дивитись всі</p>
+        <a href="" class="view-all">Дивитись всі</a>
         <ul class="list">
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <li>
+            <a href="" class="product-card">
+              <img src="" alt="" />
+            </a>
+            <p class="size">Розмір: 61 x 184 x 2130 мм</p>
+            <a href="">
+              <h3 class="link-title">
+                Ліжко Спарта / Sparta з підйомним механізмом
+              </h3>
+            </a>
+            <p>В наявності</p>
+            <p class="past-price">25 400 грн.</p>
+            <p>15 400 грн.</p>
+          </li>
+          <li>
+            <a href="" class="product-card">
+              <img src="" alt="" />
+            </a>
+            <p class="size">Розмір: 61 x 184 x 2130 мм</p>
+            <a href="">
+              <h3 class="link-title">Ліжко Аргон з підйомним механізмом</h3>
+            </a>
+            <p>В наявності</p>
+
+            <p>16 400 грн.</p>
+          </li>
+          <li>
+            <a href="" class="product-card">
+              <img src="" alt="" />
+            </a>
+            <p class="size">Розмір: 61 x 184 x 2130 мм</p>
+            <a href="">
+              <h3 class="link-title">Ліжко Престиж з підйомним механізмом</h3>
+            </a>
+            <p>В наявності</p>
+
+            <p>14 969 грн.</p>
+          </li>
+          <li>
+            <a href="" class="product-card">
+              <img src="" alt="" />
+            </a>
+            <p class="size">Розмір: 61 x 184 x 2130 мм</p>
+            <a href="">
+              <h3 class="link-title">Диван Токіо-2</h3>
+            </a>
+            <p>В наявності</p>
+
+            <p>13 211 грн.</p>
+          </li>
+          <li>
+            <a href="" class="product-card">
+              <img src="" alt="" />
+            </a>
+            <p class="size">Розмір: 61 x 184 x 2130 мм</p>
+            <a href="">
+              <h3 class="link-title">Матрац Largo SLIM / Ларго Слім</h3>
+            </a>
+            <p>В наявності</p>
+            <p class="past-price">3 122 грн.</p>
+            <p>2 810 грн.</p>
+          </li>
+          <li>
+            <a href="" class="product-card">
+              <img src="" alt="" />
+            </a>
+            <p class="size">Розмір: 61 x 184 x 2130 мм</p>
+            <a href="">
+              <h3 class="link-title">
+                Матрац ARGENTUM AMALTEA / Аргентум Амалті
+              </h3>
+            </a>
+            <p>В наявності</p>
+            <p class="past-price">5 966 грн.</p>
+            <p>5 071 грн.</p>
+          </li>
+          <li>
+            <a href="" class="product-card">
+              <img src="" alt="" />
+            </a>
+            <p class="size">Розмір: 61 x 184 x 2130 мм</p>
+            <a href="">
+              <h3 class="link-title">Диван Браво</h3>
+            </a>
+            <p>В наявності</p>
+
+            <p>10 008 грн.</p>
+          </li>
+          <li>
+            <a href="" class="product-card">
+              <img src="" alt="" />
+            </a>
+            <p class="size">Розмір: 61 x 184 x 2130 мм</p>
+            <a href="">
+              <h3 class="link-title">Ліжко МК-5</h3>
+            </a>
+            <p>В наявності</p>
+
+            <p>8 775 грн.</p>
+          </li>
         </ul>
       </section>
       <!-- АКЦІЇ -->
@@ -294,14 +386,9 @@
         <li><a href="">Умови покупки</a></li>
         <li><a href="">Політика конфіденційності</a></li>
       </ul>
-      <a href="tel:+38 067 929-45-45">+38 067 929-45-45 </a>
-      <a href="tel:+38 050 133-45-45"> +38 050 133-45-45 </a>
-      <a
-        href="tel:
-+38 093 170-75-45"
-      >
-        +38 093 170-75-45</a
-      >
+      <a href="tel:+380679294545">+38 067 929-45-45 </a>
+      <a href="tel:+380501334545"> +38 050 133-45-45 </a>
+      <a href="tel:+380931707545"> +38 093 170-75-45</a>
       <!-- КАРТА -->
       <a href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
         >м. Київ, провулок Ізяславський 52, поверх 2</a
