add color for view-all to shares

--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
         </ul>
       </section>
       <!-- АКЦІЇ -->
-      <section class="section">
+      <section class="section shares">
         <h2 class="section-title">Акції</h2>
-        <p>Дивитись всі</p>
+        <a href="" class="view-all">Дивитись всі</a>
         <ul class="list">
           <li>
             <a href=""
