--- a/index.html
+++ b/index.html
@@ -26,32 +26,34 @@
           <li><a href=""></a></li>
         </ul>
         <!-- ДАЛІ БУДЕ ФОРМА- ЯК ДОЙДУ ДО ФОРМ - ТОДІ ЗРОБЛЮ -->
-        <a href="./index.html">
-          <img
-            src="./images/logo-header.svg"
-            alt="логотип"
-            width="250"
-            height="50"
-          />
-        </a>
-        <button type="button">Каталог</button>
-        <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
-        <p class="work-hours">Щодня з 9:00 до 18:00</p>
-        <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
-        <ul class="icons-list list">
-          <li><a href="" class="icons-link">Акції</a></li>
-          <li><a href="" class="icons-link">Розпродаж</a></li>
-          <li><a href="" class="icons-link">Купити в кредит</a></li>
-        </ul>
-        <ul class="species-list list">
-          <li><a href="" class="species-link">Дитяча</a></li>
-          <li><a href="" class="species-link">Кухня</a></li>
-          <li><a href="" class="species-link">Ванна</a></li>
-          <li><a href="" class="species-link">Спальня</a></li>
-          <li><a href="" class="species-link">Передпокій</a></li>
-          <li><a href="" class="species-link">Вітальня</a></li>
-          <li><a href="" class="species-link">Офіс</a></li>
-        </ul>
+        <div class="header-bg">
+          <a href="./index.html">
+            <img
+              src="./images/logo-header.svg"
+              alt="логотип"
+              width="250"
+              height="50"
+            />
+          </a>
+          <button type="button">Каталог</button>
+          <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
+          <p class="work-hours">Щодня з 9:00 до 18:00</p>
+          <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
+          <ul class="icons-list list">
+            <li><a href="" class="icons-link">Акції</a></li>
+            <li><a href="" class="icons-link">Розпродаж</a></li>
+            <li><a href="" class="icons-link">Купити в кредит</a></li>
+          </ul>
+          <ul class="species-list list">
+            <li><a href="" class="species-link">Дитяча</a></li>
+            <li><a href="" class="species-link">Кухня</a></li>
+            <li><a href="" class="species-link">Ванна</a></li>
+            <li><a href="" class="species-link">Спальня</a></li>
+            <li><a href="" class="species-link">Передпокій</a></li>
+            <li><a href="" class="species-link">Вітальня</a></li>
+            <li><a href="" class="species-link">Офіс</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
     <main>
@@ -71,61 +73,61 @@
         <ul class="list">
           <li>
             <a href=""
-              ><h3 class="title-desc">Ліжка</h3>
+              ><h3 class="title-descr">Ліжка</h3>
               <p class="text-amount">54</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-desc">Матраци</h3>
+              ><h3 class="title-descr">Матраци</h3>
               <p class="text-amount">30</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-desc">М'які меблі</h3>
+              ><h3 class="title-descr">М'які меблі</h3>
               <p class="text-amount">196</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-desc">Шафи</h3>
+              ><h3 class="title-descr">Шафи</h3>
               <p class="text-amount">79</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-desc">Комоди</h3>
+              ><h3 class="title-descr">Комоди</h3>
               <p class="text-amount">54</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-desc">Тумби</h3>
+              ><h3 class="title-descr">Тумби</h3>
               <p class="text-amount">64</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-desc">Столи</h3>
+              ><h3 class="title-descr">Столи</h3>
               <p class="text-amount">35</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-desc">Стільці</h3>
+              ><h3 class="title-descr">Стільці</h3>
               <p class="text-amount">89</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-desc">Меблеві стіни</h3>
+              ><h3 class="title-descr">Меблеві стіни</h3>
               <p class="text-amount">24</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-desc">Кухні</h3>
+              ><h3 class="title-descr">Кухні</h3>
               <p class="text-amount">30</p></a
             >
           </li>
@@ -267,7 +269,7 @@
         </ul>
       </section>
       <!-- ОСТАННІ ВІДГУКИ  -->
-      <section class="section">
+      <section class="section last-reviews">
         <h2 class="section-title">Останні відгуки</h2>
         <a href=""
           ><img
@@ -277,35 +279,86 @@
             height="80"
         /></a>
         <h3>Магазин меблів для дому «KROVATO»</h3>
-        <p>5.0</p>
-        <p>Базовано на відгуках: 269</p>
+        <p class="rating">5.0</p>
+        <p class="count-rating">Базовано на відгуках: 269</p>
         <button type="button">Написати відгук</button>
-        <a href="">Всі відгуки</a>
-      </section>
-      <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
-      <section class="section">
-        <h2 class="section-title">Свіжі статті та останні новини</h2>
-        <a href="">Читати блог</a>
+        <a href="" class="all-reviews">Всі відгуки</a>
         <ul class="list">
           <li>
-            <img src="" alt="" />
-            <p></p>
-            <a href="">Детальніше</a>
+            <p>Іван Стедниця</p>
+            <p class="reviews-descr">
+              Хочу відзначити злагоджену та чітку роботу всіх співробітників, з
+              ким довелося контактувати при виборі та купівлі дивану Orange-Line
+              Родео SF17-LX6-PLNGR. Велику допомогу при виборі надала спеціаліст
+              з продажу Уляна ...
+            </p>
+            <a href="" class="reviews-link">Диван Orange-Line Родео SF ...</a>
+            <p>25.01.2022</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <p></p>
-            <a href="">Детальніше</a>
+            <p>Іван Стедниця</p>
+            <p class="reviews-descr">
+              Хочу відзначити злагоджену та чітку роботу всіх співробітників, з
+              ким довелося контактувати при виборі та купівлі дивану Orange-Line
+              Родео SF17-LX6-PLNGR. Велику допомогу при виборі надала спеціаліст
+              з продажу Уляна ...
+            </p>
+            <a href="" class="reviews-link">Диван Orange-Line Родео SF ...</a>
+            <p>25.01.2022</p>
           </li>
           <li>
-            <img src="" alt="" />
-            <p></p>
-            <a href="">Детальніше</a>
+            <p>Іван Стедниця</p>
+            <p class="reviews-descr">
+              Хочу відзначити злагоджену та чітку роботу всіх співробітників, з
+              ким довелося контактувати при виборі та купівлі дивану Orange-Line
+              Родео SF17-LX6-PLNGR. Велику допомогу при виборі надала спеціаліст
+              з продажу Уляна ...
+            </p>
+            <a href="" class="reviews-link">Диван Orange-Line Родео SF ...</a>
+            <p>25.01.2022</p>
           </li>
         </ul>
       </section>
-      <!-- ПРО  -->
-      <section>
+      <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
+      <section class="section articles-news">
+        <h2 class="section-title">Свіжі статті та останні новини</h2>
+        <a href="" class="read-blog">Читати блог</a>
+        <ul class="list">
+          <li>
+            <img
+              src="./images/chairs-living-room.jpg"
+              alt="стільці для вітальні"
+              width="410"
+              height="270"
+            />
+            <p>Стільці для вітальні. Як правильно вибрати?</p>
+            <a href="" class="link-detail">Детальніше</a>
+          </li>
+          <li>
+            <img
+              src="./images/kitchen.jpg"
+              alt="стільці і кухонний куточок"
+              width="410"
+              height="270"
+            />
+            <p>Що краще вибрати для кухні – стільці чи кухонний куточок?</p>
+            <a href="" class="link-detail">Детальніше</a>
+          </li>
+          <li>
+            <img
+              src="./images/furniture-living-room.jpg"
+              alt="меблі для вітальні"
+              width="410"
+              height="270"
+            />
+            <p>Оформлення вітальні. Які м'які меблі краще вибрати?</p>
+            <a href="" class="link-detail">Детальніше</a>
+          </li>
+        </ul>
+      </section>
+      <!-- ПЕРЕВАГИ -->
+      <section class="about">
+        <h2>Benefits</h2>
         <p>KROVATO - коли потрібні якісні меблі за доступною ціною!</p>
         <p>
           Якщо в пошуковий рядок браузера ввести запит: «Куплю ліжко, шафу,
@@ -326,75 +379,86 @@
           меблеві серії в класичному та модерному стилі, лінійки для оформлення
           житла в дусі романтики або скандинавського лаконізму. ..
         </p>
-      </section>
-      <!-- ПЕРЕВАГИ -->
-      <section>
-        <ul class="list">
-          <li>
-            <img src="" alt="" />
-            <p>Безкоштовна збірка</p>
-          </li>
-          <li>
-            <img src="" alt="" />
-            <p>Післягарантійне обслуговування</p>
-          </li>
-          <li>
-            <img src="" alt="" />
-            <p>Знижки клієнтам</p>
-          </li>
-        </ul>
+
+        <section class="benefits">
+          <h2>Benefits</h2>
+          <ul class="list">
+            <li>
+              <img src="" alt="" />
+              <p>Безкоштовна доставка</p>
+            </li>
+            <li>
+              <img src="" alt="" />
+              <p>Безкоштовна збірка</p>
+            </li>
+            <li>
+              <img src="" alt="" />
+              <p>Післягарантійне обслуговування</p>
+            </li>
+            <li>
+              <img src="" alt="" />
+              <p>Знижки клієнтам</p>
+            </li>
+          </ul>
+        </section>
       </section>
     </main>
     <!-- ФУТЕР -->
-    <footer>
+    <footer class="footer">
       <a href="/index.html">
         <img src="./images/logo-header.svg" alt="логотип" />
       </a>
-      <p>Приєднуйтесь</p>
-      <p>Допомога і консультація:</p>
-      <p>Інформація</p>
+      <p class="footer-text">Приєднуйтесь</p>
+      <p class="footer-text">Допомога і консультація:</p>
+      <p class="footer-title">Інформація</p>
       <ul class="list">
-        <li><a href="">Про нас</a></li>
-        <li><a href="">Оплата</a></li>
-        <li><a href="">Доставка та збірка</a></li>
-        <li><a href="">Відгуки</a></li>
-        <li><a href="">Блог</a></li>
-        <li><a href="">Контакти</a></li>
-        <li><a href="">Мапа сайту</a></li>
+        <li><a href="" class="footer-link">Про нас</a></li>
+        <li><a href="" class="footer-link">Оплата</a></li>
+        <li><a href="" class="footer-link">Доставка та збірка</a></li>
+        <li><a href="" class="footer-link">Відгуки</a></li>
+        <li><a href="" class="footer-link">Блог</a></li>
+        <li><a href="" class="footer-link">Контакти</a></li>
+        <li><a href="" class="footer-link">Мапа сайту</a></li>
       </ul>
-
-      <p>Категорії</p>
+      <p class="footer-title">Категорії</p>
       <ul class="list">
-        <li><a href="">Ліжка</a></li>
-        <li><a href="">Матраци</a></li>
-        <li><a href="">М’які меблі</a></li>
-        <li><a href="">Шафи</a></li>
-        <li><a href="">Комоди</a></li>
-        <li><a href="">Тумби</a></li>
-        <li><a href="">Столи</a></li>
-        <li><a href="">Стільці</a></li>
-        <li><a href="">Меблеві стіни</a></li>
-        <li><a href="">Кухні</a></li>
+        <li><a href="" class="footer-link">Ліжка</a></li>
+        <li><a href="" class="footer-link">Матраци</a></li>
+        <li><a href="" class="footer-link">М’які меблі</a></li>
+        <li><a href="" class="footer-link">Шафи</a></li>
+        <li><a href="" class="footer-link">Комоди</a></li>
+        <li><a href="" class="footer-link">Тумби</a></li>
+        <li><a href="" class="footer-link">Столи</a></li>
+        <li><a href="" class="footer-link">Стільці</a></li>
+        <li><a href="" class="footer-link">Меблеві стіни</a></li>
+        <li><a href="" class="footer-link">Кухні</a></li>
       </ul>
-      <p>Клієнтам</p>
+      <p class="footer-title">Клієнтам</p>
       <ul class="list">
-        <li><a href="">Акції</a></li>
-        <li><a href="">Розпродаж</a></li>
-        <li><a href="">Купити в кредит</a></li>
-        <li><a href="">Обмін і повернення товару</a></li>
-        <li><a href="">Часто задавані питання</a></li>
-        <li><a href="">Умови покупки</a></li>
-        <li><a href="">Політика конфіденційності</a></li>
+        <li><a href="" class="footer-link">Акції</a></li>
+        <li><a href="" class="footer-link">Розпродаж</a></li>
+        <li><a href="" class="footer-link">Купити в кредит</a></li>
+        <li><a href="" class="footer-link">Обмін і повернення товару</a></li>
+        <li><a href="" class="footer-link">Часто задавані питання</a></li>
+        <li><a href="" class="footer-link">Умови покупки</a></li>
+        <li><a href="" class="footer-link">Політика конфіденційності</a></li>
       </ul>
-      <a href="tel:+380679294545">+38 067 929-45-45 </a>
-      <a href="tel:+380501334545"> +38 050 133-45-45 </a>
-      <a href="tel:+380931707545"> +38 093 170-75-45</a>
-      <!-- КАРТА -->
-      <a href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
-        >м. Київ, провулок Ізяславський 52, поверх 2</a
-      >
-      <p>Працюємо щодня з 9:00 до 18:00</p>
-      <p>&#169; KROVATO - Технології сну - 2022. Всі права захищені.</p>
+      <address>
+        <a href="tel:+380679294545" class="footer-number">+38 067 929-45-45 </a>
+        <a href="tel:+380501334545" class="footer-number">
+          +38 050 133-45-45
+        </a>
+        <a href="tel:+380931707545" class="footer-number"> +38 093 170-75-45</a>
+        <p class="footer-call">Передзвоніть мені</p>
+        <!-- КАРТА -->
+        <a href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8" class="footer-map"
+          >м. Київ, провулок Ізяславський 52, поверх 2</a
+        >
+      </address>
+      <p class="footer-work">Працюємо щодня з 9:00 до 18:00</p>
+      <p class="copyright">
+        &#169; KROVATO - Технології сну - 2022. Всі права захищені.
+      </p>
     </footer>
   </body>
 </html>
