add markup for header, popular categories, popular products

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bed</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -35,7 +41,7 @@
               height="50"
             />
           </a>
-          <button type="button">Каталог</button>
+          <button type="button" class="button catalog">Каталог</button>
           <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
           <p class="work-hours">Щодня з 9:00 до 18:00</p>
           <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
@@ -73,62 +79,62 @@
         <ul class="list">
           <li>
             <a href=""
-              ><h3 class="title-descr">Ліжка</h3>
-              <p class="text-amount">54</p></a
+              ><h3 class="description title-descr">Ліжка</h3>
+              <p class="description amount">54</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-descr">Матраци</h3>
-              <p class="text-amount">30</p></a
+              ><h3 class="description title-descr">Матраци</h3>
+              <p class="description amount">30</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-descr">М'які меблі</h3>
-              <p class="text-amount">196</p></a
+              ><h3 class="description title-descr">М'які меблі</h3>
+              <p class="description amount">196</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-descr">Шафи</h3>
-              <p class="text-amount">79</p></a
+              ><h3 class="description title-descr">Шафи</h3>
+              <p class="description amount">79</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-descr">Комоди</h3>
-              <p class="text-amount">54</p></a
+              ><h3 class="description title-descr">Комоди</h3>
+              <p class="description amount">54</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-descr">Тумби</h3>
-              <p class="text-amount">64</p></a
+              ><h3 class="description title-descr">Тумби</h3>
+              <p class="description amount">64</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-descr">Столи</h3>
-              <p class="text-amount">35</p></a
+              ><h3 class="description title-descr">Столи</h3>
+              <p class="description amount">35</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-descr">Стільці</h3>
-              <p class="text-amount">89</p></a
+              ><h3 class="description title-descr">Стільці</h3>
+              <p class="description amount">89</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-descr">Меблеві стіни</h3>
-              <p class="text-amount">24</p></a
+              ><h3 class="description title-descr">Меблеві стіни</h3>
+              <p class="description amount">24</p></a
             >
           </li>
           <li>
             <a href=""
-              ><h3 class="title-descr">Кухні</h3>
-              <p class="text-amount">30</p></a
+              ><h3 class="description title-descr">Кухні</h3>
+              <p class="description amount">30</p></a
             >
           </li>
         </ul>
@@ -148,9 +154,9 @@
                 Ліжко Спарта / Sparta з підйомним механізмом
               </h3>
             </a>
-            <p>В наявності</p>
+            <p class="in-stock">В наявності</p>
             <p class="past-price">25 400 грн.</p>
-            <p>15 400 грн.</p>
+            <p class="current-price">15 400 грн.</p>
           </li>
           <li>
             <a href="" class="product-card">
@@ -160,9 +166,9 @@
             <a href="">
               <h3 class="link-title">Ліжко Аргон з підйомним механізмом</h3>
             </a>
-            <p>В наявності</p>
+            <p class="in-stock">В наявності</p>
 
-            <p>16 400 грн.</p>
+            <p class="current-price">16 400 грн.</p>
           </li>
           <li>
             <a href="" class="product-card">
@@ -172,9 +178,9 @@
             <a href="">
               <h3 class="link-title">Ліжко Престиж з підйомним механізмом</h3>
             </a>
-            <p>В наявності</p>
+            <p class="in-stock">В наявності</p>
 
-            <p>14 969 грн.</p>
+            <p class="current-price">14 969 грн.</p>
           </li>
           <li>
             <a href="" class="product-card">
@@ -184,9 +190,9 @@
             <a href="">
               <h3 class="link-title">Диван Токіо-2</h3>
             </a>
-            <p>В наявності</p>
+            <p class="in-stock">В наявності</p>
 
-            <p>13 211 грн.</p>
+            <p class="current-price">13 211 грн.</p>
           </li>
           <li>
             <a href="" class="product-card">
@@ -196,9 +202,9 @@
             <a href="">
               <h3 class="link-title">Матрац Largo SLIM / Ларго Слім</h3>
             </a>
-            <p>В наявності</p>
+            <p class="in-stock">В наявності</p>
             <p class="past-price">3 122 грн.</p>
-            <p>2 810 грн.</p>
+            <p class="current-price">2 810 грн.</p>
           </li>
           <li>
             <a href="" class="product-card">
@@ -210,9 +216,9 @@
                 Матрац ARGENTUM AMALTEA / Аргентум Амалті
               </h3>
             </a>
-            <p>В наявності</p>
+            <p class="in-stock">В наявності</p>
             <p class="past-price">5 966 грн.</p>
-            <p>5 071 грн.</p>
+            <p class="current-price">5 071 грн.</p>
           </li>
           <li>
             <a href="" class="product-card">
@@ -222,9 +228,8 @@
             <a href="">
               <h3 class="link-title">Диван Браво</h3>
             </a>
-            <p>В наявності</p>
-
-            <p>10 008 грн.</p>
+            <p class="in-stock">В наявності</p>
+            <p class="current-price">10 008 грн.</p>
           </li>
           <li>
             <a href="" class="product-card">
@@ -234,9 +239,9 @@
             <a href="">
               <h3 class="link-title">Ліжко МК-5</h3>
             </a>
-            <p>В наявності</p>
+            <p class="in-stock">В наявності</p>
 
-            <p>8 775 грн.</p>
+            <p class="current-price">8 775 грн.</p>
           </li>
         </ul>
       </section>
@@ -281,7 +286,7 @@
         <h3>Магазин меблів для дому «KROVATO»</h3>
         <p class="rating">5.0</p>
         <p class="count-rating">Базовано на відгуках: 269</p>
-        <button type="button">Написати відгук</button>
+        <button type="button" class="button">Написати відгук</button>
         <a href="" class="all-reviews">Всі відгуки</a>
         <ul class="list">
           <li>
