continur markup for:shares, last-reviews, articles-news, about(benefits), footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               height="50"
             />
           </a>
-          <button type="button" class="button catalog">Каталог</button>
+          <button type="button" class="button">Каталог</button>
           <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
           <p class="work-hours">Щодня з 9:00 до 18:00</p>
           <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
@@ -283,14 +283,14 @@
             width="80"
             height="80"
         /></a>
-        <h3>Магазин меблів для дому «KROVATO»</h3>
+        <h3 class="title-rating">Магазин меблів для дому «KROVATO»</h3>
         <p class="rating">5.0</p>
         <p class="count-rating">Базовано на відгуках: 269</p>
         <button type="button" class="button">Написати відгук</button>
         <a href="" class="all-reviews">Всі відгуки</a>
         <ul class="list">
           <li>
-            <p>Іван Стедниця</p>
+            <p class="reviews-name">Іван Стедниця</p>
             <p class="reviews-descr">
               Хочу відзначити злагоджену та чітку роботу всіх співробітників, з
               ким довелося контактувати при виборі та купівлі дивану Orange-Line
@@ -301,7 +301,7 @@
             <p>25.01.2022</p>
           </li>
           <li>
-            <p>Іван Стедниця</p>
+            <p class="reviews-name">Іван Стедниця</p>
             <p class="reviews-descr">
               Хочу відзначити злагоджену та чітку роботу всіх співробітників, з
               ким довелося контактувати при виборі та купівлі дивану Orange-Line
@@ -312,7 +312,7 @@
             <p>25.01.2022</p>
           </li>
           <li>
-            <p>Іван Стедниця</p>
+            <p class="reviews-name">Іван Стедниця</p>
             <p class="reviews-descr">
               Хочу відзначити злагоджену та чітку роботу всіх співробітників, з
               ким довелося контактувати при виборі та купівлі дивану Orange-Line
@@ -336,7 +336,9 @@
               width="410"
               height="270"
             />
-            <p>Стільці для вітальні. Як правильно вибрати?</p>
+            <p class="news-title">
+              Стільці для вітальні. Як правильно вибрати?
+            </p>
             <a href="" class="link-detail">Детальніше</a>
           </li>
           <li>
@@ -346,7 +348,9 @@
               width="410"
               height="270"
             />
-            <p>Що краще вибрати для кухні – стільці чи кухонний куточок?</p>
+            <p class="news-title">
+              Що краще вибрати для кухні – стільці чи кухонний куточок?
+            </p>
             <a href="" class="link-detail">Детальніше</a>
           </li>
           <li>
@@ -356,16 +360,20 @@
               width="410"
               height="270"
             />
-            <p>Оформлення вітальні. Які м'які меблі краще вибрати?</p>
+            <p class="news-title">
+              Оформлення вітальні. Які м'які меблі краще вибрати?
+            </p>
             <a href="" class="link-detail">Детальніше</a>
           </li>
         </ul>
       </section>
       <!-- ПЕРЕВАГИ -->
       <section class="about">
-        <h2>Benefits</h2>
-        <p>KROVATO - коли потрібні якісні меблі за доступною ціною!</p>
-        <p>
+        <h2>Про</h2>
+        <p class="after-title">
+          KROVATO - коли потрібні якісні меблі за доступною ціною!
+        </p>
+        <p class="about-text">
           Якщо в пошуковий рядок браузера ввести запит: «Куплю ліжко, шафу,
           диван», система видасть сотні продавців, що спеціалізуються з продажу
           цього товару. Але далеко не всі магазини та сайти в інтернеті можуть
@@ -386,23 +394,23 @@
         </p>
 
         <section class="benefits">
-          <h2>Benefits</h2>
+          <h2>Переваги</h2>
           <ul class="list">
             <li>
               <img src="" alt="" />
-              <p>Безкоштовна доставка</p>
+              <p class="benefits-text">Безкоштовна доставка</p>
             </li>
             <li>
               <img src="" alt="" />
-              <p>Безкоштовна збірка</p>
+              <p class="benefits-text">Безкоштовна збірка</p>
             </li>
             <li>
               <img src="" alt="" />
-              <p>Післягарантійне обслуговування</p>
+              <p class="benefits-text">Післягарантійне обслуговування</p>
             </li>
             <li>
               <img src="" alt="" />
-              <p>Знижки клієнтам</p>
+              <p class="benefits-text">Знижки клієнтам</p>
             </li>
           </ul>
         </section>
@@ -411,7 +419,7 @@
     <!-- ФУТЕР -->
     <footer class="footer">
       <a href="/index.html">
-        <img src="./images/logo-header.svg" alt="логотип" />
+        <img src="./images/logo-footer.svg" alt="логотип" />
       </a>
       <p class="footer-text">Приєднуйтесь</p>
       <p class="footer-text">Допомога і консультація:</p>
@@ -449,18 +457,24 @@
         <li><a href="" class="footer-link">Політика конфіденційності</a></li>
       </ul>
       <address>
-        <a href="tel:+380679294545" class="footer-number">+38 067 929-45-45 </a>
-        <a href="tel:+380501334545" class="footer-number">
+        <a href="tel:+380679294545" class="connection footer-connection"
+          >+38 067 929-45-45
+        </a>
+        <a href="tel:+380501334545" class="connection footer-connection">
           +38 050 133-45-45
         </a>
-        <a href="tel:+380931707545" class="footer-number"> +38 093 170-75-45</a>
-        <p class="footer-call">Передзвоніть мені</p>
+        <a href="tel:+380931707545" class="connection footer-connection">
+          +38 093 170-75-45</a
+        >
+        <p class="connection footer-call">Передзвоніть мені</p>
         <!-- КАРТА -->
-        <a href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8" class="footer-map"
+        <a
+          href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
+          class="connection footer-connection"
           >м. Київ, провулок Ізяславський 52, поверх 2</a
         >
       </address>
-      <p class="footer-work">Працюємо щодня з 9:00 до 18:00</p>
+      <p class="connection footer-connection">Працюємо щодня з 9:00 до 18:00</p>
       <p class="copyright">
         &#169; KROVATO - Технології сну - 2022. Всі права захищені.
       </p>
