add join property for tag body

--- a/index.html
+++ b/index.html
@@ -482,4 +482,5 @@
   </body>
 </html>
 
-<!-- НЕ ЗАБУТИ ЗА ARIA-LABEL - ДЛЯ СВГ  -->
+<!-- НЕ ЗАБУТИ ЗА ARIA-LABEL - ДЛЯ А - в яких буде свг -->
+<!-- ЗАДАТИ ТРАГЕТ БЛАНК ДЛЯ ПОСИЛАНЬ ЯКІ ВЕДУТЬ НА ЗОВН РЕСУРСИ -->
