add visually-hidden to h1

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <main>
       <!-- ГЕРОЙ -->
       <section>
-        <h1>Ліжко хюпер</h1>
+        <h1 class="visually-hidden">Ліжко хюпер</h1>
         <img
           src="./images/slider-akcii.jpg"
           alt="слайдер"
