add modern normalize

--- a/index.html
+++ b/index.html
@@ -10,134 +10,144 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!-- ХЕДЕР -->
     <header class="header">
-      <nav>
-        <ul class="list">
-          <li><a href="" class="link-about">Про нас</a></li>
-          <li><a href="" class="link-about">Оплата</a></li>
-          <li><a href="" class="link-about">Доставка та збірка</a></li>
-          <li><a href="" class="link-about">Відгуки</a></li>
-          <li><a href="" class="link-about">Блог</a></li>
-          <li><a href="" class="link-about">Контакти</a></li>
-        </ul>
-        <p class="help-consul">Допомога і консультація:</p>
-        <ul class="list">
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-        </ul>
-        <!-- ДАЛІ БУДЕ ФОРМА- ЯК ДОЙДУ ДО ФОРМ - ТОДІ ЗРОБЛЮ -->
-        <div class="header-bg">
-          <a href="./index.html">
-            <img
-              src="./images/logo-header.svg"
-              alt="логотип"
-              width="250"
-              height="50"
-            />
-          </a>
-          <button type="button" class="button">Каталог</button>
-          <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
-          <p class="work-hours">Щодня з 9:00 до 18:00</p>
-          <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
-          <ul class="icons-list list">
-            <li><a href="" class="icons-link">Акції</a></li>
-            <li><a href="" class="icons-link">Розпродаж</a></li>
-            <li><a href="" class="icons-link">Купити в кредит</a></li>
+      <div class="container">
+        <nav>
+          <ul class="list">
+            <li><a href="" class="link-about">Про нас</a></li>
+            <li><a href="" class="link-about">Оплата</a></li>
+            <li><a href="" class="link-about">Доставка та збірка</a></li>
+            <li><a href="" class="link-about">Відгуки</a></li>
+            <li><a href="" class="link-about">Блог</a></li>
+            <li><a href="" class="link-about">Контакти</a></li>
           </ul>
-          <ul class="species-list list">
-            <li><a href="" class="species-link">Дитяча</a></li>
-            <li><a href="" class="species-link">Кухня</a></li>
-            <li><a href="" class="species-link">Ванна</a></li>
-            <li><a href="" class="species-link">Спальня</a></li>
-            <li><a href="" class="species-link">Передпокій</a></li>
-            <li><a href="" class="species-link">Вітальня</a></li>
-            <li><a href="" class="species-link">Офіс</a></li>
+          <p class="help-consul">Допомога і консультація:</p>
+          <ul class="list">
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
           </ul>
-        </div>
-      </nav>
+          <!-- ДАЛІ БУДЕ ФОРМА- ЯК ДОЙДУ ДО ФОРМ - ТОДІ ЗРОБЛЮ -->
+          <div class="header-bg">
+            <a href="./index.html">
+              <img
+                src="./images/logo-header.svg"
+                alt="логотип"
+                width="250"
+                height="50"
+              />
+            </a>
+            <button type="button" class="button">Каталог</button>
+            <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
+            <p class="work-hours">Щодня з 9:00 до 18:00</p>
+            <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
+            <ul class="icons-list list">
+              <li><a href="" class="icons-link">Акції</a></li>
+              <li><a href="" class="icons-link">Розпродаж</a></li>
+              <li><a href="" class="icons-link">Купити в кредит</a></li>
+            </ul>
+            <ul class="species-list list">
+              <li><a href="" class="species-link">Дитяча</a></li>
+              <li><a href="" class="species-link">Кухня</a></li>
+              <li><a href="" class="species-link">Ванна</a></li>
+              <li><a href="" class="species-link">Спальня</a></li>
+              <li><a href="" class="species-link">Передпокій</a></li>
+              <li><a href="" class="species-link">Вітальня</a></li>
+              <li><a href="" class="species-link">Офіс</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main>
       <!-- ГЕРОЙ -->
       <section>
-        <h1 class="visually-hidden">Ліжко хюпер</h1>
-        <img
-          src="./images/slider-akcii.jpg"
-          alt="слайдер"
-          width="1290"
-          height="420"
-        />
+        <div class="container">
+          <h1 class="visually-hidden">Ліжко хюпер</h1>
+          <img
+            src="./images/slider-akcii.jpg"
+            alt="слайдер"
+            width="1290"
+            height="420"
+          />
+        </div>
       </section>
       <!-- ПОПУЛЯРНІ КАТЕГОРІЇ -->
       <section class="section popular-categories">
-        <h2 class="section-title">Популярні категорії</h2>
-        <ul class="list">
-          <li>
-            <a href=""
-              ><h3 class="description title-descr">Ліжка</h3>
-              <p class="description amount">54</p></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><h3 class="description title-descr">Матраци</h3>
-              <p class="description amount">30</p></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><h3 class="description title-descr">М'які меблі</h3>
-              <p class="description amount">196</p></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><h3 class="description title-descr">Шафи</h3>
-              <p class="description amount">79</p></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><h3 class="description title-descr">Комоди</h3>
-              <p class="description amount">54</p></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><h3 class="description title-descr">Тумби</h3>
-              <p class="description amount">64</p></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><h3 class="description title-descr">Столи</h3>
-              <p class="description amount">35</p></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><h3 class="description title-descr">Стільці</h3>
-              <p class="description amount">89</p></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><h3 class="description title-descr">Меблеві стіни</h3>
-              <p class="description amount">24</p></a
-            >
-          </li>
-          <li>
-            <a href=""
-              ><h3 class="description title-descr">Кухні</h3>
-              <p class="description amount">30</p></a
-            >
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Популярні категорії</h2>
+          <ul class="list">
+            <li>
+              <a href=""
+                ><h3 class="description title-descr">Ліжка</h3>
+                <p class="description amount">54</p></a
+              >
+            </li>
+            <li>
+              <a href=""
+                ><h3 class="description title-descr">Матраци</h3>
+                <p class="description amount">30</p></a
+              >
+            </li>
+            <li>
+              <a href=""
+                ><h3 class="description title-descr">М'які меблі</h3>
+                <p class="description amount">196</p></a
+              >
+            </li>
+            <li>
+              <a href=""
+                ><h3 class="description title-descr">Шафи</h3>
+                <p class="description amount">79</p></a
+              >
+            </li>
+            <li>
+              <a href=""
+                ><h3 class="description title-descr">Комоди</h3>
+                <p class="description amount">54</p></a
+              >
+            </li>
+            <li>
+              <a href=""
+                ><h3 class="description title-descr">Тумби</h3>
+                <p class="description amount">64</p></a
+              >
+            </li>
+            <li>
+              <a href=""
+                ><h3 class="description title-descr">Столи</h3>
+                <p class="description amount">35</p></a
+              >
+            </li>
+            <li>
+              <a href=""
+                ><h3 class="description title-descr">Стільці</h3>
+                <p class="description amount">89</p></a
+              >
+            </li>
+            <li>
+              <a href=""
+                ><h3 class="description title-descr">Меблеві стіни</h3>
+                <p class="description amount">24</p></a
+              >
+            </li>
+            <li>
+              <a href=""
+                ><h3 class="description title-descr">Кухні</h3>
+                <p class="description amount">30</p></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
       <section class="section popular-products">
