add class for h2 to shares, add margin,padding some elements

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <!-- АКЦІЇ -->
       <section class="section shares">
         <div class="container">
-          <h2 class="section-title">Акції</h2>
+          <h2 class="section-title title">Акції</h2>
           <a href="" class="view-all">Дивитись всі</a>
           <ul class="list">
             <li>
