--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
     <!-- ХЕДЕР -->
     <header class="header">
       <nav class="container">
-        <ul class="list">
-          <li><a href="" class="link-about">Про нас</a></li>
-          <li><a href="" class="link-about">Оплата</a></li>
-          <li><a href="" class="link-about">Доставка та збірка</a></li>
-          <li><a href="" class="link-about">Відгуки</a></li>
-          <li><a href="" class="link-about">Блог</a></li>
-          <li><a href="" class="link-about">Контакти</a></li>
+        <ul class="list list-about">
+          <li class="item-about"><a href="" class="link-about">Про нас</a></li>
+          <li class="item-about"><a href="" class="link-about">Оплата</a></li>
+          <li class="item-about">
+            <a href="" class="link-about">Доставка та збірка</a>
+          </li>
+          <li class="item-about"><a href="" class="link-about">Відгуки</a></li>
+          <li class="item-about"><a href="" class="link-about">Блог</a></li>
+          <li class="item-about"><a href="" class="link-about">Контакти</a></li>
         </ul>
         <p class="help-consul">Допомога і консультація:</p>
         <ul class="list">
@@ -49,20 +51,42 @@
           <!-- ДАЛЫ ФОРМА-ПОШУК ТОВАРЫВ -->
           <p class="work-hours">Щодня з 9:00 до 18:00</p>
           <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
-          <ul class="icons-list list">
-            <li><a href="" class="icons-link">Акції</a></li>
-            <li><a href="" class="icons-link">Розпродаж</a></li>
-            <li><a href="" class="icons-link">Купити в кредит</a></li>
-          </ul>
-          <ul class="species-list list">
-            <li><a href="" class="species-link">Дитяча</a></li>
-            <li><a href="" class="species-link">Кухня</a></li>
-            <li><a href="" class="species-link">Ванна</a></li>
-            <li><a href="" class="species-link">Спальня</a></li>
-            <li><a href="" class="species-link">Передпокій</a></li>
-            <li><a href="" class="species-link">Вітальня</a></li>
-            <li><a href="" class="species-link">Офіс</a></li>
-          </ul>
+          <div class="list-wrapper">
+            <ul class="icons-list list">
+              <li class="icons-item">
+                <a href="" class="icons-link">Акції</a>
+              </li>
+              <li class="icons-item">
+                <a href="" class="icons-link">Розпродаж</a>
+              </li>
+              <li class="icons-item">
+                <a href="" class="icons-link">Купити в кредит</a>
+              </li>
+            </ul>
+            <ul class="species-list list">
+              <li class="species-item">
+                <a href="" class="species-link">Дитяча</a>
+              </li>
+              <li class="species-item">
+                <a href="" class="species-link">Кухня</a>
+              </li>
+              <li class="species-item">
+                <a href="" class="species-link">Ванна</a>
+              </li>
+              <li class="species-item">
+                <a href="" class="species-link">Спальня</a>
+              </li>
+              <li class="species-item">
+                <a href="" class="species-link">Передпокій</a>
+              </li>
+              <li class="species-item">
+                <a href="" class="species-link">Вітальня</a>
+              </li>
+              <li class="species-item">
+                <a href="" class="species-link">Офіс</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
@@ -85,8 +109,9 @@
           <h2 class="section-title">Популярні категорії</h2>
           <ul class="list">
             <li>
-              <a href=""
-                ><h3 class="description title-descr">Ліжка</h3>
+              <a href="">
+                <img src="./images/beds..png" alt="" />
+                <h3 class="description title-descr">Ліжка</h3>
                 <p class="description amount">54</p></a
               >
             </li>
@@ -386,7 +411,7 @@
         </div>
       </section>
       <!-- ПРО: ПЕРЕВАГИ -->
-      <section class="section about">
+      <section class="section about no-margin">
         <div class="container">
           <h2 class="visually-hidden">Про</h2>
           <p class="after-title">
